# pulseview

./: .gitignore  CMakeLists.txt  Doxyfile  HACKING  INSTALL  NEWS  README  about.cpp  about.h  about.ui  config.h.in  datasnapshot.cpp  datasnapshot.h  extdef.h  logicdata.cpp  logicdata.h  logicdatasnapshot.cpp  logicdatasnapshot.h  logicsignal.cpp  logicsignal.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pulseview.qrc  pulseviewico.rc  samplingbar.cpp  samplingbar.h  signal.cpp  signal.h  signaldata.cpp  signaldata.h  signalhandler.cpp  signalhandler.h  signalhandler.hpp  sigrok-qt2.pro  sigsession.cpp  sigsession.h  sigview.cpp  sigview.h  (+3 more)
.github/workflows/: build.yml
CMake/: GetGitRevisionDescription.cmake  memaccess.cmake  writepackageversion.cmake
android/: .gitignore  AndroidManifest.xml  assetreader.cpp  assetreader.hpp  bundled_libs.xml.in  custom_rules.xml  envsetup.cpp  loghandler.cpp  loghandler.h  loghandler.hpp
android/res/layout/: splash.xml
android/res/values/: libs.xml  strings-pv.xml
contrib/: org.sigrok.PulseView.appdata.xml  org.sigrok.PulseView.desktop  pulseview.desktop  pulseview.nsi  pulseview_cross.nsi  pulseview_cross.nsi.in  sigrok_mimeinfo.xml
doc/: pulseview.1
icons/: pulseview.icns
l10n/: de.ts  es_MX.ts  es_mx.ts  ja_jp.ts  mx.ts  zh_cn.ts
manual/: CMakeLists.txt  acquisition.txt  analysis.txt  cli.txt  decoders.txt  generate  import_export.txt  installation.txt  license.txt  manual.txt  overview.txt  pulseview_manual.txt
manual/asciidoctor-stylesheet-factory/: LICENSE
manual/asciidoctor-stylesheet-factory/stylesheets/: readthedocs.css
manual/images/: _callouts.xcf  pv_after_startup.xcf  pv_analysis.xcf  pv_cursors_markers.xcf  pv_decoders_1.xcf  pv_decoders_3.xcf  pv_device_config.xcf
pv/: about.cpp  about.h  analogdata.cpp  analogdata.h  analogdatasnapshot.cpp  analogdatasnapshot.h  application.cpp  application.hpp  datasnapshot.cpp  datasnapshot.h  devicemanager.cpp  devicemanager.h  devicemanager.hpp  devinst.cpp  devinst.h  exprtk.hpp  globalsettings.cpp  globalsettings.hpp  logging.cpp  logging.hpp  logicdata.cpp  logicdata.h  logicdatasnapshot.cpp  logicdatasnapshot.h  logicsignal.cpp  logicsignal.h  mainwindow.cpp  mainwindow.h  mainwindow.hpp  metadata_obj.cpp  metadata_obj.hpp  samplingbar.cpp  samplingbar.h  session.cpp  session.hpp  signal.cpp  signal.h  signaldata.cpp  signaldata.h  sigsession.cpp  (+9 more)
pv/binding/: binding.cpp  binding.hpp  decoder.cpp  decoder.hpp  decoderoptions.cpp  decoderoptions.hpp  device.cpp  device.hpp  deviceoptions.cpp  deviceoptions.hpp  inputoutput.cpp  inputoutput.hpp
pv/data/: analog.cpp  analog.h  analog.hpp  analogsegment.cpp  analogsegment.hpp  analogsnapshot.cpp  analogsnapshot.h  analogsnapshot.hpp  decoder.cpp  decoder.h  decoderstack.cpp  decoderstack.h  decoderstack.hpp  decodesignal.cpp  decodesignal.hpp  logic.cpp  logic.h  logic.hpp  logicsegment.cpp  logicsegment.hpp  logicsnapshot.cpp  logicsnapshot.h  logicsnapshot.hpp  mathsignal.cpp  mathsignal.hpp  mathsignalbase.hpp  segment.cpp  segment.hpp  signalbase.cpp  signalbase.hpp  signaldata.cpp  signaldata.h  signaldata.hpp  snapshot.cpp  snapshot.h  snapshot.hpp
pv/data/decode/: annotation.cpp  row.cpp  (+10 more)
pv/device/: device.cpp  device.h  devinst.cpp  devinst.h  file.cpp  file.h  inputfile.cpp  inputfile.h  sessionfile.cpp  sessionfile.h
pv/devices/: device.cpp  device.hpp  file.cpp  file.hpp  hardwaredevice.cpp  hardwaredevice.hpp  inputfile.cpp  inputfile.hpp  sessionfile.cpp  sessionfile.hpp
pv/dialogs/: about.cpp  about.h  about.hpp  about.ui  connect.cpp  connect.h  connect.hpp  decoder.cpp  decoder.h  deviceoptions.cpp  deviceoptions.h  hwcap.cpp  hwcap.h  inputoutputoptions.cpp  inputoutputoptions.hpp  settings.cpp  settings.hpp  storeprogress.cpp  storeprogress.h  storeprogress.hpp  triggermode.cpp  triggermode.hpp
pv/popups/: channels.cpp  channels.h  channels.hpp  deviceoptions.cpp  deviceoptions.h  deviceoptions.hpp  probes.cpp  probes.h  triggermode.cpp  triggermode.hpp
pv/prop/: bool.cpp  bool.h  bool.hpp  double.cpp  double.h  double.hpp  enum.cpp  enum.h  enum.hpp  int.cpp  int.h  int.hpp  property.cpp  property.h  property.hpp  string.cpp  string.h  string.hpp
pv/subwindows/: subwindowbase.cpp  subwindowbase.hpp
pv/toolbars/: contextbar.cpp  contextbar.h  mainbar.cpp  mainbar.hpp  samplingbar.cpp  samplingbar.h  samplingbar.hpp
pv/view/: analogsignal.cpp  analogsignal.h  analogsignal.hpp  cursor.cpp  cursor.h  cursor.hpp  cursorheader.cpp  cursorheader.h  cursorheader.hpp  cursorpair.cpp  cursorpair.h  cursorpair.hpp  decodesignal.cpp  decodesignal.h  decodetrace.cpp  decodetrace.h  decodetrace.hpp  flag.cpp  flag.hpp  header.cpp  header.h  header.hpp  logicsignal.cpp  logicsignal.h  logicsignal.hpp  marginwidget.cpp  marginwidget.h  marginwidget.hpp  rowitem.cpp  rowitem.h  rowitem.hpp  rowitemiterator.h  rowitemiterator.hpp  rowitemowner.cpp  rowitemowner.h  rowitemowner.hpp  rowitempaintparams.cpp  rowitempaintparams.hpp  ruler.cpp  ruler.h  (+43 more)
pv/views/: viewbase.cpp  viewbase.hpp
pv/widgets/: colorbutton.cpp  colorbutton.hpp  colorpopup.cpp  colorpopup.hpp  colourbutton.cpp  colourbutton.h  colourbutton.hpp  colourpopup.cpp  colourpopup.h  colourpopup.hpp  decodergroupbox.cpp  decodergroupbox.h  decodergroupbox.hpp  decodermenu.cpp  decodermenu.h  decodermenu.hpp  devicetoolbutton.cpp  devicetoolbutton.hpp  exportmenu.cpp  exportmenu.hpp  flowlayout.cpp  flowlayout.hpp  hidingmenubar.cpp  hidingmenubar.hpp  importmenu.cpp  importmenu.hpp  popup.cpp  popup.h  popup.hpp  popuptoolbutton.cpp  popuptoolbutton.h  popuptoolbutton.hpp  sweeptimingwidget.cpp  sweeptimingwidget.h  sweeptimingwidget.hpp  timestampspinbox.cpp  timestampspinbox.hpp  wellarray.cpp  wellarray.h  wellarray.hpp
test/: CMakeLists.txt  logicdatasnapshot.cpp  test.cpp  test.hpp  util.cpp
test/data/: analogsegment.cpp  analogsnapshot.cpp  decoder.cpp  decoderstack.cpp  logicsegment.cpp  logicsnapshot.cpp  segment.cpp
test/view/: ruler.cpp
themes/darkstyle/: darkstyle.qss
themes/qdarkstyle/: style.qss
(+88 files in other folders)
